--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "automated-testing",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "clean:reports": "rmdir /S /Q cypress\\reports && mkdir cypress\\reports && mkdir cypress\\reports\\mochareports",
-    "pretest": "npm run clean:reports",
-    "scripts": "cypress run",
-    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
-    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
-    "posttest": "npm run combine-reports && npm run generate-report",
-    "test": "npm run scripts || npm run posttest",
-    "cypress:open": "cypress open"
-  },
-  "author": "Fadel Nararia Rahman",
-  "license": "ISC",
-  "devDependencies": {
-    "cypress": "^4.8.0",
-    "cypress-multi-reporters": "^1.4.0",
-    "mocha": "^8.0.1",
-    "mochawesome": "^6.1.1",
-    "mochawesome-merge": "^4.1.0",
-    "mochawesome-report-generator": "^5.1.0"
-  },
-  "dependencies": {
-    "crypto": "^1.0.1",
-    "cypress-downloadfile": "^1.2.0",
-    "path": "^0.12.7",
-    "pdf-parse": "^1.1.1"
+    "name": "automated-testing",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "clean:reports": "rm -R -f cypress/reports && mkdir cypress/reports && mkdir cypress/reports/mochareports",
+        "pretest": "npm run clean:reports",
+        "scripts": "cypress run",
+        "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
+        "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
+        "posttest": "npm run combine-reports && npm run generate-report",
+        "test" : "npm run scripts || npm run posttest",
+        "cypress:open": "cypress open"
+      
+    },
+    "author": "Fadel Nararia Rahman",
+    "license": "ISC",
+    "devDependencies": {
+      "cypress": "^4.8.0",
+      "cypress-multi-reporters": "^1.4.0",
+      "mocha": "^8.0.1",
+      "mochawesome": "^6.1.1",
+      "mochawesome-merge": "^4.1.0",
+      "mochawesome-report-generator": "^5.1.0"
+    },
+    "dependencies": {
+      "crypto": "^1.0.1",
+      "cypress-downloadfile": "^1.2.0",
+      "path": "^0.12.7",
+      "pdf-parse": "^1.1.1"
+    }
   }
-}
+  
